# AI-SmartTodo

./: .gitignore  CLAUDE.md  README.md  compose.yaml  启动指南.md  实训报告.docx  实训报告.md  开发常见问题详解.md  开发常见问题详解_整理版.md
ai_service/: Dockerfile  README.md  check_env.py  llm_client.py  main.py  pyproject.toml  rag_service.py  split_service.py  todo_ai_pb2.py  todo_ai_pb2.pyi  todo_ai_pb2_grpc.py
ai_service/tests/: test_split_service.py
backend/: .air.toml  .env.example  .gitignore  Dockerfile  go.mod  go.sum  test_data.sql
backend/cmd/grpc_test/: main.go
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/controller/: ai.go  auth.go  auth_test.go  doc.go  todo.go
backend/internal/middleware/: auth.go  doc.go
backend/internal/model/: doc.go  todo.go  user.go
backend/internal/repository/: db.go  doc.go
backend/internal/service/: ai_client.go  doc.go
backend/pkg/pb/: doc.go  todo_ai.pb.go  todo_ai_grpc.pb.go
docs/: 14天混合推理AI全栈项目开发计划书.docx  14天混合推理AI全栈项目开发计划书.md  air热重载配置指南.md  实训报告 - 副本 (2).docx  实训报告 - 副本.docx  项目开发背景要求.md
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AiAssistant.tsx  ErrorBoundary.tsx  ModelConfigModal.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  KnowledgeBase.tsx  Login.tsx  Profile.tsx
frontend/src/services/: ai.ts  api.ts  auth.ts  todo.ts
frontend/src/types/: config.ts
proto/: todo_ai.proto  文件作用.md
