[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]
